funcionalidad de boton para volver atras en ejercicio validar contraseña

--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
             <i class="fa-solid fa-eye toggle_password" id="toggle_password"></i>
         </div>
         <button id="button" onclick="validar()">Validar</button>
+        <a href="../indx.html"> Volver atras</a>
     </div>
     <script src="../Js/Libreria/sweetalert2@11.js"></script>
     <script src="../Js/Validator/validator.js"></script>
