--- a/indx.html
+++ b/indx.html
@@ -8,8 +8,8 @@
 </head>
 <body>
      <menu>
-        <li> <a href="/html/index.html">Validador</a></li>
-         <li> <a href="/html/TODO.html">Manipular Dom</a></li>
+        <li> <a href="html/index.html">Validador</a></li>
+         <li> <a href="html/TODO.html">Manipular Dom</a></li>
      </menu>
 </body>
 </html>
